# smart-construction-iot-platform

./: .gitignore  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile.base
backend/services/alerts-notifications/: Dockerfile  package.json
backend/services/data-storage/: Dockerfile  package.json
backend/services/device-communication/: package.json
backend/services/device-management/: package-lock.json  package.json
backend/services/device-management-rs/: .env.example  Cargo.toml  Dockerfile  README.md
backend/services/device-management-rs/src/: main.rs
backend/services/user-auth/: Dockerfile  package.json
backend/services/video-streaming/: package.json
backend/shared/models/: device.js  (+1 more)
docker/: docker-compose.yml
docker/init-mysql/: 01-init.sql
docker/init-postgres/: 01-init.sql
docs/: tasks.md
docs/requirements-baseline/: authz-parity-rollout.md  governance.md  runtime-gap-review.md  source-inventory.md  validation-cases.md
frontend/: index.html  ui-smoke-test.mjs
frontend-vue/: index.html  package-lock.json  package.json
frontend-vue/src/: App.vue  api.js  main.js  styles.css
frontend.pre-device-ui-merge-20260419-100125/: index.html  snapshot.md
kubernetes/: influxdb.yaml  kafka.yaml  namespace.yaml  postgres.yaml  rabbitmq.yaml
scripts/: deploy.sh
tests/integration/: e2e.test.js
tests/load/: load-test.js
tests/unit/: access-control.test.js  alerts-notifications.test.js  data-storage.test.js  service-authz-parity.test.js  user-auth.test.js
(+79 files in other folders)
